--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Xcellify Partner Portal</title>
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.webmanifest" />
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Xcellify Partner Portal</title>
-  <script>
-    const XcellifyURLConfig = {
-      api_domain_url: 'https://xcellify.com/',
-    };
-    if (['dev-partner.xcellify.com', 'localhost'].includes(window.location.hostname)) {
-      XcellifyURLConfig.api_domain_url = 'https://dev.xcellify.com/';
-    } else if (window.location.hostname === 'test-partner.xcellify.com') {
-      XcellifyURLConfig.api_domain_url = 'https://test.xcellify.com/';
-    }
-    window.XcellifyURLConfig = XcellifyURLConfig;
-  </script>
-</head>
+    <script>
+      const XcellifyURLConfig = {
+        api_domain_url: 'https://xcellify.com/',
+      };
+      if (
+        ['dev-partner.xcellify.com', 'localhost'].includes(
+          window.location.hostname
+        )
+      ) {
+        XcellifyURLConfig.api_domain_url = 'https://dev.xcellify.com/';
+      } else if (window.location.hostname === 'test-partner.xcellify.com') {
+        XcellifyURLConfig.api_domain_url = 'https://test.xcellify.com/';
+      }
+      window.XcellifyURLConfig = XcellifyURLConfig;
+    </script>
+  </head>
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
