--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Xcellify Partner Portal</title>
     <link rel="manifest" href="/manifest.json" />
     <link rel="manifest" href="/manifest.webmanifest" />
+    <script src="/js/pizzip.js"></script>
 
     <script>
       const XcellifyURLConfig = {
